[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Rounded Rectangle 1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Ellipse 1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Front.png" type="Texture" id=4]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=5]
[ext_resource path="res://Resources/KeySprites/A.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tiles/Cell1.png" type="Texture" id=7]
[ext_resource path="res://Resources/KeySprites/E.png" type="Texture" id=8]
[ext_resource path="res://Resources/KeySprites/D.png" type="Texture" id=9]
[ext_resource path="res://Resources/KeySprites/Z.png" type="Texture" id=10]
[ext_resource path="res://Resources/KeySprites/C.png" type="Texture" id=11]
[ext_resource path="res://Resources/KeySprites/Q.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Tutorial/MovementTutorial.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Tutorial Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 504.0
size_flags_vertical = 3
custom_constants/margin_right = 128
custom_constants/margin_top = 64
custom_constants/margin_left = 128
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="VBoxContainer/MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.227451 )
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 504.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 256, 256 )
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0458679
margin_top = 0.374573
margin_right = 0.0458984
margin_bottom = 0.374573
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementTutorial" type="Control" parent="VBoxContainer/MarginContainer/Background/CenterContainer"]
margin_left = 384.0
margin_top = 220.0
margin_right = 384.0
margin_bottom = 220.0
script = ExtResource( 13 )
AnimationSpeed = 0.25
ScaleArrows = 1.5
ScaleKeys = 1.5

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
margin_bottom = 18.0
rect_scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell1" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -68.7574
margin_top = -84.0619
margin_right = 111.243
margin_bottom = 117.938
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell6" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -5.30841
margin_top = 20.6295
margin_right = 174.692
margin_bottom = 222.63
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell7" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -131.308
margin_top = 20.6295
margin_right = 48.6915
margin_bottom = 222.63
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell8" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -5.30841
margin_top = -189.049
margin_right = 174.692
margin_bottom = 12.9506
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell9" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -131.308
margin_top = -189.049
margin_right = 48.6915
margin_bottom = 12.9506
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell2" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -194.394
margin_top = -84.0619
margin_right = -14.394
margin_bottom = 117.938
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell3" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = 56.7807
margin_top = -84.0619
margin_right = 236.781
margin_bottom = 117.938
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -15.8333
margin_right = -5.0
margin_bottom = -15.8333
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = 60.1831
margin_top = -181.537
margin_right = 124.183
margin_bottom = -117.537
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E2" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = 150.148
margin_top = -33.8947
margin_right = 214.148
margin_bottom = 30.1053
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E3" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = 60.1831
margin_top = 127.33
margin_right = 124.183
margin_bottom = 191.33
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E4" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = -123.394
margin_top = 127.33
margin_right = -59.3935
margin_bottom = 191.33
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E5" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = -212.695
margin_top = -33.8947
margin_right = -148.695
margin_bottom = 30.1053
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E6" type="TextureRect" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Controls"]
margin_left = -123.394
margin_top = -181.537
margin_right = -59.3935
margin_bottom = -117.537
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Control" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control"]
margin_left = -3.1824
margin_top = 0.24765
margin_right = -3.1824
margin_bottom = 0.24765
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( -10.6081, -43.619 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player"]
texture = ExtResource( 4 )

[node name="Arrows" type="Node2D" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player"]
scale = Vector2( 0.5, 0.5 )

[node name="arrow_up_right" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( 60, -104 )
rotation = -2.61799
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="arrow_right" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( 122, -1 )
rotation = -1.5708
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="arrow_down_right" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( 60, 104 )
rotation = -0.523599
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="arrow_down_left" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( -60, 104 )
rotation = 0.523599
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="arrow_left" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( -122, -1 )
rotation = 1.5708
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="arrow_up_left" type="Sprite" parent="VBoxContainer/MarginContainer/Background/CenterContainer/MovementTutorial/Control/Player/Arrows"]
position = Vector2( -60.3297, -103.922 )
rotation = 2.61799
scale = Vector2( 0.06, 0.055 )
texture = ExtResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.0
margin_right = 6.10352e-05
margin_bottom = 7.0
rect_scale = Vector2( 1, 0.5 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
max_value = 1.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_bottom = 32

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_right = 1024.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
alignment = 1

[node name="TutorialTab1" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBox"]
margin_left = 466.0
margin_right = 486.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 32 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TutorialTab2" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBox"]
self_modulate = Color( 1, 1, 1, 0.380392 )
margin_left = 490.0
margin_right = 510.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 32 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TutorialTab3" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBox"]
self_modulate = Color( 1, 1, 1, 0.380392 )
margin_left = 514.0
margin_right = 534.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 32 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TutorialTab4" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBox"]
self_modulate = Color( 1, 1, 1, 0.380392 )
margin_left = 538.0
margin_right = 558.0
margin_bottom = 64.0
rect_min_size = Vector2( 20, 32 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
